# Neural-Deep-Retina

./: .gitignore  README.md  config-3d.yaml  config-custom.yaml  config.yaml  pyproject.toml  requirements.txt  run_best_hpo_cfc.sh  run_best_hpo_general.sh  run_clf_grid.sh  run_hpo.sh  run_reg_grid.sh  run_reg_n_times.sh  sweep-cfc.yaml  sweep.yaml
.github/workflows/: neural_ci.yml
configs/: config-3d.yaml  config-classification.yaml  config-custom.yaml  config-hasani.yaml  config-og.yaml  config-shot.yaml  config.yaml  config_sindy.yaml  curriculum-schedule.yaml
configs/curriculum/: curriculum-schedule.yaml
configs/from_server/: config-3d.yaml  config-cbce.yaml  config-vgg.yaml
configs/old_configs/: config-classification.yaml  (+2 more)
data/: make_validation_split.py  manipulate_data.py  neural_code_data_manipulator.py
notebooks/: 01-neural-data-setup.ipynb  02-neural-data-setup_exp.ipynb  03-neural-data-setup.ipynb  05-neural-CNN-RNN-model.ipynb  06-data-compression-CNNRNN.ipynb  07-CNNRNN-all-channels.ipynb  09-analysis.ipynb  09-plot-images-neurosymbolic.ipynb  10-tabular-ml.ipynb  11-prediction-plots.ipynb  12-exp-boxplots.ipynb  analyze_results.ipynb  compare_sindy_cfc.ipynb  make_plots.ipynb  nesy-retina-report.ipynb  output-smoothing.ipynb  saliency_maps.ipynb  saliency_maps.py  vis_utils.py  visualize_dataset.ipynb
pretrained_weights/: README.md
slurm/: run_reg_grid.sh
src/: extract_equation.py  finetune.py  test.py  train.py  train_autoencoder.py
tests/: test_make_validation_split.py  test_neural_code_data_manipulator.py
wandb/: settings
(+79 files in other folders)
